Fix vertical alignment of topic-metadata row
I'm not sure why, but on only *some* topics the group name is moved up
by 1px. This should fix it.

--- a/tildes/scss/modules/_topic.scss
+++ b/tildes/scss/modules/_topic.scss
@@ -106,6 +106,7 @@
 
 .topic-metadata {
   display: flex;
+  align-items: baseline;
   margin-bottom: 0.2rem;
   max-height: 4rem;
   overflow: hidden;
